--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
           },
           {
             "key": "Cross-Origin-Embedder-Policy",
-            "value": "require-corp"
+            "value": "credentialless"
           }
         ]
       }
